--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+## H2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:mannaja
+spring.datasource.username=sa
+spring.datasource.password=
+## Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
