--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,8 @@ local.properties
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.gradle/
+out/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
